css/styles.css
/* ... */
/* Lists */
.list {
  list-style: none;
  padding-left: 0;
}

.list--inline .list__item {
  display: inline-block;
  margin-right: 2rem;
}

.list--tick {
  list-style-image: url(../img/tick.svg);
  padding-left: 3rem;
  color: var(--color-headings);
}

.list--tick .list__item {
  padding-left: 0.5rem;
  margin-bottom: 1rem;
}

@media screen and (min-width: 1024px) {
  .list-tick .list__item {
    padding-left: 0;
  }
}

/* Icons */
.icon {
  height: 40px;
  width: 40px;
}

.icon--small {
  width: 30px;
  height: 30px;
}

.icon--primary {
  fill: var(--color-primary);
}

.icon--white {
  fill: white;
}

.icon-container {
  background: #f3f9fa;
  border-radius: 100%;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  height: 64px;
  width: 64px;
}

.icon-container--block {
  display: block;
}

.icon-container--accent {
  background: var(--color-accent);
}

/* Buttons */
.btn {
  border-radius: 40px;
  border: 0;
  outline: 0;
  cursor: pointer;
  font-size: 1.8rem;
  font-weight: 600;
  margin: 1rem 0;
  padding: 2rem 4vw;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn .icon {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  vertical-align: middle;
}

.btn--block {
  display: inline-block;
  width: 100%;
}

.btn--primary {
  color: white;
  background: var(--color-primary);
}
.btn--primary:hover {
  background: #3a8ffd;
}

.btn--secondary {
  color: white;
  background: var(--color-secondary);
}
.btn--secondary:hover {
  background: #00c8eb;
}

.btn--accent {
  color: white;
  background: var(--color-accent);
}
.btn--accent:hover {
  background: #ec3000;
}
.btn--outline {
  background: #fff;
  color: var(--color-headings);
  border: 2px solid var(--color-headings);
}

.btn--outline:hover {
  color: white;
  background: var(--color-headings);
}

.btn--stretched {
  padding-left: 6rem;
  padding-right: 6rem;
}

@media screen and (min-width: 1024px) {
  .btn {
    font-size: 1.5rem;
    padding: 2rem 3rem;
  }
}

/* Inputs */
.input {
  border-radius: var(--border-radius);
  border: 1px solid var(--color-border);
  color: var(--color-headings);
  font-size: 2rem;
  outline: 0;
  padding: 1.5rem 3.5rem;
}
::placeholder {
  color: #cdcbd7;
}

.input-group {
  border: 1px solid var(--color-border);
  border-radius: var(--border-radius);
  display: flex;
}

.input-group .input {
  border: 0;
  flex-grow: 1;
  padding: 1.5rem 2rem;
  width: 0;
}

.input-group .btn {
  margin: 4px;
}

@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.5rem;
  }
}

/* Bottom Up Approach
Build components first
Then add them to page

Top Down Approach
Build page first
Then work on components
Leads to weird layout issues*/

/* Card */
.card {
  border-radius: 7px;
  box-shadow: 0 0 20px 10px #f3f3f3;
  overflow: hidden;
}

.card__header,
.card__body {
  padding: 2rem 3rem;
}

.card--primary .card__header {
  background: var(--color-primary);
  color: white;
}

.card--primary .badge--primary {
  background: #126de4;
}

.card--secondary .card__header {
  background: var(--color-secondary);
  color: white;
}

.card--secondary .badge--secondary {
  background: #02cdf1;
}

/* Plans */
.plan {
  transition: transform 0.2s ease-out;
}
.plan__name {
  color: white;
  font-size: 2.4rem;
  font-weight: 500;
  margin: 0;
}

.plan__price {
  font-size: 5rem;
}

.plan__billing-cycle {
  font-size: 2rem;
  font-weight: 300;
  margin-right: 1rem;
  opacity: 0.8;
}

.plan__description {
  display: block;
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 1px;
}

.plan .list__item {
  margin-bottom: 2rem;
}

.plan--popular .card__header {
  position: relative;
}

.plan--popular .card__header::before {
  content: url(../img/popular.svg);
  width: 40px;
  display: inline-block;
  position: absolute;
  top: -6px;
  right: 5%;
}

.plan:hover {
  transform: scale(1.05);
}

.plan--popular:hover {
  transform: scale(1.15);
}

@media screen and (min-width: 1024px) {
  .plan--popular {
    transform: scale(1.1);
  }

  .plan__name {
    font-size: 1.4rem;
  }

  .plan__price {
    font-size: 5rem;
  }

  .plan__billing-cycle {
    font-size: 1.6rem;
  }

  .plan__description {
    font-size: 1.7rem;
  }
}

/* Media Content AKA Media Object */
.media {
  display: flex;
  margin-bottom: 4rem;
}

.media--column {
  flex-direction: column;
}

.media--column .media__image {
  margin-left: 2rem;
  margin-bottom: 1rem;
}

.media__title {
  margin-top: 0;
}
.media__body {
  margin: 0 2rem;
}
.media__image {
  margin-top: 1rem;
}

/* Quotes */
.quote {
  color: var(--color-body-darker);
  font-size: 3rem;
  font-style: italic;
  line-height: 1.3;
}

.quote__text::before {
  content: open-quote;
}

.quote__text::after {
  content: close-quote;
}

.quote__author {
  font-size: 3rem;
  font-style: normal;
  margin-bottom: 0;
}

.quote__organization {
  color: var(--color-headings);
  font-size: 2rem;
  font-style: normal;
  opacity: 0.4;
}

.quote__line {
  position: relative;
  bottom: 10px;
}

@media screen and (min-width: 1024px) {
  .quote {
    font-size: 2rem;
  }

  .quote-author {
    font-size: 2.4rem;
  }

  .quote__organization {
    font-size: 1.6rem;
  }
}

/* Grids */
.grid {
  display: grid;
}

@media screen and (min-width: 768px) {
  .grid--1x2 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1024px) {
  .grid--1x3 {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Testimonials */
.testimonial {
  padding: 3rem;
}

.testimonial__image {
  position: relative;
  margin: 0 5rem;
}

.testimonial__image > img {
  width: 100%;
}

.testimonial__image > .icon-container {
  position: absolute;
  top: 3rem;
  right: -32px;
}

@media screen and (min-width: 768px) {
  .testimonial__image {
    margin: 0;
  }

  .testimonial .quote,
  .testimonial .quote__author {
    font-size: 2.4rem;
  }

  .testimonial .quote {
    margin-left: 6rem;
    margin-right: 0;
  }
}
/* ... */

